--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,10 +2,12 @@
 @import 'base/color';
 @import 'base/typography';
 
-
 @import 'pages/landing-page';
+@import 'pages/test-page';
 
 @import 'components/nav';
+@import 'components/btn';
 
 @import 'layout/title';
+@import 'layout/contact';
 
