--- a/sass/pages/_landing-page.scss
+++ b/sass/pages/_landing-page.scss
@@ -41,6 +41,14 @@
 .section-brief
 {
 	text-align: center;
+	font-size: 11px;
+	line-height: 17px;
+}
+
+.para
+{
+	font-size: 13px;
+	line-height: 20px;
 }
 
 // Options section
@@ -60,13 +68,13 @@ $option-col-padding: 30px;
 	padding-right:$option-col-padding;
 	border-box: box-sizing;
 	padding-bottom: 50px;
-	width: 25%;
+	width: 100%;
 	float: left;
 }
 
 .option-icon
 {
-	width: 50%;
+	width: 30%;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
@@ -74,22 +82,26 @@ $option-col-padding: 30px;
 	box-sizing:border-box;
 }
 
-// @media only screen and (min-width: 1000px)
-// {
-// 	.option-col
-// 	{
-// 		width: 25%;
-// 	}
-// }
-
-@media only screen and (max-width: 1000px)
+@media only screen and (min-width: 1001px)
 {
-	// .option-col
-	// {
-	// 	width: 50%;
-	// }
+	.option-col
+	{
+		width: 25%;
+	}
 	.option-icon
 	{
-		width: 60%;
+		width: 50%;
+	}
+}
+
+@media only screen and (min-width: 600px) and (max-width: 1000px)
+{
+	.option-col
+	{
+		width: 50%;
+	}
+	.option-icon
+	{
+		width: 50%;
 	}
 }
